# cafe_order

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
cafe_order/: manage.py
cafe_order/api/: apps.py  serializers.py  views.py
cafe_order/api/urls/: v1.py
cafe_order/cafe_order/: settings.py  urls.py  wsgi.py
cafe_order/core/: constants.py  views.py
cafe_order/order/: admin.py  apps.py  constants.py  forms.py  mixins.py  models.py  urls.py  views.py
cafe_order/order/migrations/: 0001_initial.py  0002_alter_order_table_number.py  0003_alter_order_status.py  0004_order_created_at.py  0005_alter_order_status.py  0006_alter_meal_name_alter_meal_price_and_more.py
cafe_order/static/css/: style.css
cafe_order/templates/: base.html
cafe_order/templates/core/: 403.html  403csrf.html  404.html  500.html
cafe_order/templates/includes/: messages.html
cafe_order/templates/order/: meal_create.html  order_confirm_delete.html  order_create.html  order_list.html  order_update.html  revenue.html
tests/: conftest.py  factories.py
tests/api/: test_meals.py  test_orders.py
tests/core/: test_views.py
tests/order/: test_forms.py  test_urls.py  test_views.py
